--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web_project_4_esp",
   "version": "1.0.0",
   "description": "Around The U.S. Photo Sharing App",
-  "main": "index.js",
+  "main": "./pages/index.js",
   "scripts": {
     "build": "webpack --mode production"
   },
