--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Around The U.S. Photo Sharing App",
   "main": "./pages/index.js",
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "rm -rf dist && webpack"
   },
   "repository": {
     "type": "git",
