--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Around The U.S. Photo Sharing App",
   "main": "./pages/index.js",
   "scripts": {
-    "build": "rm -rf dist && webpack"
+    "build": "rm -rf dist && webpack --mode production",
+    "dev": "webpack serve --mode development"
   },
   "repository": {
     "type": "git",
