--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/aegisnull/web_project_4_esp#readme",
   "devDependencies": {
+    "@babel/core": "^7.18.9",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
